계속 배우기/spring/SmsExample/src/main/java/com/example/smsexample/global/error/CustomErrorResponse.java
package com.example.smsexample.global.error;


import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;

@Getter
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@Builder
public class CustomErrorResponse {

    private final int status;
    private final String message;
}